<resources>
    <string name="app_name">SkipLine</string>
    <string name="background" translatable="false">background</string>
    <string name="logo" translatable="false">logo</string>
    <string name="or" translatable="false">OR</string>
    <string name="e_mail" translatable="false">E_mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="forgot_password" translatable="false">Forgot Password ?</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t have an account ?</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="name" translatable="false">Name</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="have_an_account" translatable="false">Have an account ?</string>
    <string name="facebook_app_id" translatable="false">312478923631499</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb312478923631499</string>
    <string name="server_client_id" translatable="false">YOUR_SERVER_CLIENT_ID</string>
    <string name="register" translatable="false">register</string>
    <string name="just_pick_it_scan_and_go" translatable="false">just Pick it, Scan and Go</string>
    <string name="welcome_nto" translatable="false">welcome\nto</string>
    <string name="continue_with_google">continue with google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>