<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />

        <TextView
            android:id="@+id/welcome_to_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="monospace"
            android:paddingTop="5dp"
            android:text="@string/welcome_nto"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/green_dark"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_to_txt"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_btn"
            app:layout_constraintEnd_toEndOf="@id/google_sign_in_btn"
            app:layout_constraintStart_toEndOf="@+id/log_in_button"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/log_in"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_btn"
            app:layout_constraintEnd_toStartOf="@id/register_button"
            app:layout_constraintStart_toStartOf="@id/google_sign_in_btn"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.gms.common.internal.SignInButtonImpl
            android:id="@+id/google_sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/common_google_signin_btn_text_dark_normal_background"
            android:foreground="@drawable/common_google_signin_btn_text_dark_normal"
            android:foregroundGravity="left|center|fill_vertical"
            android:text="@string/continue_with_google"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/facebook_sign_in_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/slogan_txt"
            app:layout_constraintEnd_toEndOf="@+id/google_sign_in_btn"
            app:layout_constraintStart_toStartOf="@+id/google_sign_in_btn"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_btn"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/slogan_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/asar"
            android:paddingTop="50dp"
            android:paddingBottom="20dp"
            android:text="@string/just_pick_it_scan_and_go"
            android:textAlignment="center"
            android:textColor="@color/green_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/facebook_sign_in_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <include-->
<!--        android:id="@+id/login_layout"-->
<!--        layout="@layout/login_layout"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="fill_parent"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <include-->
<!--        android:id="@+id/register_layout"-->
<!--        layout="@layout/register_layout"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="fill_parent"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>